# adi-agent-loop-plugin

./: Cargo.toml  plugin.toml
src/: lib.rs
