[package]
name = "adi-agent-loop-plugin"
version = "0.8.3"
edition = "2021"
license = "BSL-1.0"
description = "ADI Agent Loop plugin providing MCP tools for autonomous LLM agents"
authors = ["ADI Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lib-plugin-abi = { path = "../lib-plugin-abi" }
adi-agent-loop-core = { path = "../adi-agent-loop-core" }
abi_stable = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
